--- a/test/index.html
+++ b/test/index.html
@@ -25,6 +25,8 @@
     <script src="scripts/question3.js"></script>
     <!-- include spec files here... -->
     <script src="spec/question1.js"></script>
+    <script src="spec/question2.js"></script>
+    <script src="spec/question3.js"></script>
     <script>
     (function() {
         mocha.run();
